--- a/GitDemoLibrary/GitDemoLibrary/GitDemoLibrary.csproj
+++ b/GitDemoLibrary/GitDemoLibrary/GitDemoLibrary.csproj
@@ -40,10 +40,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Class2.cs" />
-    <Compile Include="Class3.cs" />
+    <Compile Include="Service1.cs" />
+    <Compile Include="Service2.cs" />
+    <Compile Include="Service3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SomeManagerClass.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
